# knitting_machine

./: PDDemulate.py  README  brother.py  dumppattern.py  insertpattern.py  pyproject.toml
app/gui/: Gui.py
app/tkapp/: KnittingApp.py  Messages.py
